2007-07-21  David Huggins-Daines <dhuggins@cs.cmu.edu>

	* README:
	* configure.ac:
	* src/voice-control.c: (on_sink_listening), (process_action),
	(show_notification), (on_sink_message),
	(voice_control_applet_init), (main):
	
	libnotify support to show recognized text.

2007-07-21  David Huggins-Daines <dhuggins@cs.cmu.edu>

	* README:
	* configure.ac:
	* src/Makefile.am:
	* src/gstsphinxsink.c:
	* src/gstsphinxsink.h:
	
	Ported to pocketsphinx.

2007-07-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* README:
	
	Updated the list of requirements. Thanks to 
	Marius Andreiana <mandreiana.lists@gmail.com>

2007-06-27  Raphael Nunes da Motta <raphael.nunes.enc04@gmail.com>

	* lang/desktop-control.fsg:
	* src/action.c: (do_action):
	* src/action.h:
	* src/voice-control.c: (on_sink_message),
	(voice_control_ui_changed):

        Added command RUN TEXT EDITOR

2007-06-27  Raphael Nunes da Motta <raphael.nunes.enc04@gmail.com>

	* NEWS:
	* README:
	* configure.ac:

        Data updated to generate release 0.2.0

2007-06-24  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_finalize),
	(gst_sphinx_sink_class_init), (gst_sphinx_sink_init),
	(gst_sphinx_sink_ad_read), (gst_sphinx_sink_calibrate_chunk),
	(gst_sphinx_sink_process_chunk), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	
	Pass fixed-size buffers to sphinx through GstAdapter. This
	should solve the problem with locking on calibration. Thanks
	a lot to Sander <avirulence@gmail.com>.

2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_set_fsg):
	* src/spi-listener.c: (control_spi_listener_dump_actions_list),
	(control_spi_listener_build_actions_list):
	
	Ifdefs for DEBUG output

2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/spi-listener.c: (is_worth_searching),
	(control_spi_listener_build_actions_list),
	(control_spi_listener_process_event),
	(control_spi_listener_window_listener_cb),