@@ -1,6 +1,6 @@
-/* GStreamer
- * Copyright (C) 1999,2000 Erik Walthinsen <omega@cse.ogi.edu>
- *                    2000 Wim Taymans <wtay@chello.be>
+/* This file is a part of GStreamer
+ *
+ * Copyright (C) 2007  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
  *
  * gstsphinxsink.h:
  *
